hawk/public/stylesheets/garage/aside.css
/**
 * Garage sidebar stylesheets
 */
.garage-aside {
    position: absolute;
    top: 0;
    left: 0;
    background: var(--darkGrayBg);
    padding: 25px;
    height: 100%;
    min-width: var(--garage-aside-width);
    box-sizing: border-box;
    color: var(--grayOnDark);

    a:hover {
        color: #fff;
    }

    &__logo {
        color: #fff;
        font-weight: bold;
        font-size: 20px;
        margin-bottom: 5px;
    }

    &__settings {
        margin-top: 5px;
        font-size: 0.9em;
    }

    &__user {
        font-size: 16px;
    }

    &__heading {
        margin-top: 45px;
        margin-bottom: 15px;
        font-size: 14px;
        letter-spacing: 0.07em;
    }

    &__section {
        margin: 0 0 15px;
        font-size: 17px;
    }

    &__project {
        display: block;
        color: #fff;
        margin-bottom: 10px;
        font-size: 1.18em;
    }

    &__tag {
        display: flex;
        padding: 5px 10px;
        margin: 0 -10px;
        border-radius: 2px;
        cursor: pointer;

        &::before {
            content: '#';
            display: inline-block;
            margin-right: 0.5em;
            opacity: 0.4;
        }

        &:hover {
            background: color(var(--darkGrayBg) lightness(-3%));
        }
    }

    &__counter {
        display: inline-block;
        margin-left: auto;
        font-weight: bold;

        &--unread {

          &::before {
              content: '';
              display: inline-block;
              width: 5px;
              height: 5px;
              margin-right: 0.3em;
              margin-top: -0.3em;
              vertical-align: middle;
              border-radius: 50%;
          }

        }

        &--fatal {
            color: var(--fatalColor);

            &::before {
                background: var(--fatalColor);
            }
        }

        &--warnings {
            color: var(--warningsColor);

            &::before {
                background: var(--warningsColor);
            }
        }

        &--notice {
            color: var(--noticeColor);

            &::before {
                background: var(--noticeColor);
            }
        }

        &--javascript {
            color: var(--javascriptColor);

            &::before {
                background: var(--javascriptColor);
            }
        }
    }

    &__add {
        margin-top: 25px;
    }
}

